--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@types/react-dom": "^18.3.0",
     "emailjs-com": "^3.2.0",
     "react": "^18.3.1",
+    "react-axios": "^2.0.6",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
-    "typescript": "^5.6.2",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
