--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "emailjs-com": "^3.2.0",
+    "history": "^5.3.0",
     "react": "^18.3.1",
     "react-axios": "^2.0.6",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -48,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/history": "^4.7.11"
   }
 }
