--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.2",
+    "@mui/lab": "^6.0.0-beta.11",
     "@mui/material": "^6.1.2",
     "@mui/styled-engine-sc": "^6.1.2",
     "@testing-library/jest-dom": "^5.17.0",
