--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/lab": "^6.0.0-beta.11",
     "@mui/material": "^6.1.4",
     "@mui/styled-engine-sc": "^6.1.2",
+    "@reduxjs/toolkit": "^2.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,11 +23,13 @@
     "react": "^18.3.1",
     "react-axios": "^2.0.6",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "react-swiper": "^0.1.5",
     "react-toastify": "^10.0.5",
+    "redux": "^5.0.1",
     "styled-components": "^6.1.13",
     "swiper": "^11.1.14",
     "typescript": "^4.9.5",
