--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.2",
+    "@mui/icons-material": "^6.1.10",
     "@mui/lab": "^6.0.0-beta.11",
     "@mui/material": "^6.1.4",
     "@mui/styled-engine-sc": "^6.1.2",
@@ -22,10 +22,12 @@
     "@types/react-dom": "^18.3.0",
     "emailjs-com": "^3.2.0",
     "history": "^5.3.0",
+    "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-axios": "^2.0.6",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
