--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.10",
     "@mui/lab": "^6.0.0-beta.11",
     "@mui/material": "^6.1.4",
@@ -39,7 +40,8 @@
     "styled-components": "^6.1.13",
     "swiper": "^11.1.14",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
