--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "emailjs-com": "^3.2.0",
     "history": "^5.3.0",
     "lucide-react": "^0.468.0",
+    "pica": "^9.0.1",
     "react": "^18.3.1",
     "react-axios": "^2.0.6",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
